# mkv-subtitles

./: LICENSE  README.MD  mkvinfo.md
mkv-subtitles/: .gitignore  CMakeLists.txt  README.MD
mkv-subtitles/src/: MkvSubtitles.cpp  MkvSubtitles.h  MkvSubtitles.ui  checkableDelegate.h  main.cpp  mkv.cpp  mkv.h
python/: README.MD  pyproject.toml
python/src/: main.py
src/: gui.py  main.py
